--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   geolocator: ^7.0.3
   geocoding: ^2.0.0
   flutter_screenutil: ^5.9.0
-  google_fonts: ^6.1.0
+  google_fonts: 6.1.0
   provider: ^6.1.1
   get: ^4.6.6
   flutter_vector_icons: ^2.0.0
